; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_unpack_trees_finish.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_unpack_trees_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_options = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.merge_options*)* @unpack_trees_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unpack_trees_finish(%struct.merge_options* %0) #0 {
  %2 = alloca %struct.merge_options*, align 8
  store %struct.merge_options* %0, %struct.merge_options** %2, align 8
  %3 = load %struct.merge_options*, %struct.merge_options** %2, align 8
  %4 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  %7 = call i32 @discard_index(i32* %6)
  %8 = load %struct.merge_options*, %struct.merge_options** %2, align 8
  %9 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @clear_unpack_trees_porcelain(i32* %11)
  ret void
}

declare dso_local i32 @discard_index(i32*) #1

declare dso_local i32 @clear_unpack_trees_porcelain(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
